# x-star

./: .eslintrc.js  .gitignore  .gitmodules  Dockerfile  README.md  architecture.md  package-lock.json  package.json
client/src/: extension.ts  types.ts
cstarc/: .gitignore  .ocamlformat  Makefile  ast.ml  cstarc.opam  declarator.mli  dune  dune-project  env.ml  extractor.ml  lexer.mll  main.ml  parser.messages  parser.mly  preprocessor.py  printer.ml  proof.ml
cstarc/cstarlsp/: action.ml  cstarlsp.ml  dune  errors.ml  extProtocol.ml  server.ml  server.mli  settings.ml  stdio.ml  stdio.mli
cstarc/cstarparse/: context.ml  declarator.ml  dune  lexer.mll  parser.mly
cstarserver/: append_log.txt  ebpf
docs/: client_interface.md
examples/: README.md  clear.c  cstar.h  early_alloc.cst  forall.c  globals.c  multi_branch_complex.c  multi_branch_simple.c  mutually_recursive.c  mutually_recursive.h  noreturn.c  swap.c  vst_ide.h
examples/address_of_local/: address_of_local.c
examples/benchmark/address_of_local/: address_of_local.cst
examples/benchmark/buddy_allocator/: attach.c  attach.cst  def.cst  def.h  lemma.cst  lemma.h
examples/benchmark/forall/: forall.c  forall.cst
examples/benchmark/globals/: globals.c  globals.cst
examples/benchmark/malloc_free/: malloc_free.c  malloc_free.cst
examples/benchmark/multi_branch/: multi_branch.cst  multi_branch_simple.c  multi_branch_simple.cst
examples/benchmark/mutually_recursive/: mutually_recursive.c  mutually_recursive.cst  mutually_recursive.h
examples/benchmark/no_return/: no_return.c  no_return.cst
examples/benchmark/noreturn/: noreturn.cst
examples/benchmark/reverse/: reverse.c  reverse.cst
examples/benchmark/swap/: swap.c  swap.cst
examples/bin_tree/: CMakeLists.txt  bin_tree.c  bin_tree_datatype.c  bin_tree_test.c
examples/bin_tree/include/: bin_tree_datatype.h  common_datatype.h  cstar.h
examples/buddy_allocator/: attach.c  def.ml  lemmas.ml
examples/clear/: clear.c  clear.cst  clear.h
examples/early_allocator/: early_alloc.annot.c  early_alloc.c  early_alloc.ml  early_alloc.output  early_alloc.vst
examples/linked_list/reverse/: .clang-format  .gitignore  CMakeLists.txt  architecture.md  cstar.h  cstar_config.json  cstar_std.config  reverse.c  reverse_new.c  reverse_new.h  style_guide.md
examples/linked_list/reverse/include/: cstar.h  reverse_datatype.h
examples/linked_list/reverse/include/src/: reverse_datatype.c
examples/linked_list/reverse/proof/: reverse_proof.c  reverse_se.c  reverse_se.config  reverse_se.h  reverse_se_goals.json
examples/linked_list/reverse/test/: cstar_test.h  reverse_datatype.c  reverse_datatype.h  reverse_test.c
examples/reverse/: cstar.h  reverse.c  reverse_proof.c  reverse_test.c
examples/vst_ide/early_allocator/: .gitignore  DSLFileLists  Makefile  early_alloc.c  example.strategies  example_strategy_goal.v  example_strategy_goal_check.v  example_strategy_proof.v  goal.v  goal_check.v  lib.v  memory.h  proof_auto.v  proof_manual.v  strategychk.sh  symexec.sh  vst_ide.h
examples/vst_ide/early_allocator/include/: kernel.h  kvm_pgtable.h  page-def.h  stddef.h
lcf_lib/: .gitignore  Makefile  README.md  caml.c  caml.h  eval.ml  host.c  host.h  reverse_proof.c  sl.c  sl.h  test1.c  x
lcf_lib/hol-light/: Makefile  cstarlib.ml  helpers.ml  hol_lib.ml  reverse.hl  seplogic.hl  vst.hl  which_implies.ml
lcf_server/: .gitignore  Cargo.toml  Dockerfile  Makefile  README  attach.cpp  compile_flags.txt  def.c  def.h  drule.c  drule.h  interface.c  interface.h  lemma.c  lemma.h  proof.c  test.c  test.output copy.c  test.output.c  test_log.csv
lcf_server/caml-dyn-call/: .gitignore  Cargo.toml  build.rs
lcf_server/caml-dyn-call/src/: call.rs  lib.rs  store.rs
lcf_server/hol-light-helper/: cstarlib.ml  helpers.ml  which_implies.ml
lcf_server/hol-rpc/: Cargo.toml  build.rs
lcf_server/hol-rpc/examples/: simple-client.rs
lcf_server/hol-rpc/src/: client.rs  error.rs  interface_client.rs  interface_server.rs  lib.rs  main.rs  session.rs
lcf_server/hol-rpc/src/caml_dyn_call/: call.rs  eval.ml  function.rs  mod.rs
lcf_server/includes/: cstar.h  proof-conv.h  proof-kernel.h  proof-user.h
lcf_server/proof-kernel/: Cargo.toml  build.rs  cbindgen.toml
lcf_server/proof-kernel/src/: error.rs  gc.rs  lib.rs  types.rs
lcf_server/proof-user/: proof-conv.c  proof-user.c
server/src/: server.ts
syntaxes/: cstar.tmLanguage.json
