[package]
name = "caml-dyn-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
ocaml-interop = { workspace = true }
ocaml-sys = { workspace = true }
slotmap = { workspace = true }
tuples = { workspace = true }
