[package]
name = "hol-rpc"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envconfig = "0.11.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
eyre = { workspace = true }
futures = "0.3.30"
indicatif = "0.17.8"
ocaml-interop = { workspace = true }
ocaml-sys = { workspace = true }
serde = { workspace = true }
slotmap = { workspace = true }
stack-tokens = "0.1.0"
tarpc = { version = "0.34.0", features = [
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
] }
tokio = { version = "1.36.0", features = ["net", "rt", "macros"] }
tuples = "1.15.0"

[[bin]]
name = "hol-rpc-wrapper"
path = "src/bin/wrapper.rs"

[build-dependencies]
which = "6.0.3"
