[package]
name = "proof-kernel"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hol-rpc = { path = "../hol-rpc" }
parking_lot = "0.12.1"
envconfig = "0.11.0"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.69.4"
pkg-config = "0.3.30"
